--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.6"
+    "@vueuse/core": "^8.9.4",
+    "@vueuse/nuxt": "^8.9.4",
+    "eslint": "^8.20.0",
+    "nuxt": "3.0.0-rc.6",
+    "typescript": "^4.7.4"
   }
 }
